Refactor to SPA, update content to 2025/2026, and cleanup disclaimers

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://garlic-model.com/">
     <meta property="og:title" content="OpenAI Garlic Model - What We Know So Far">
     <meta property="og:description" content="Independent information hub for OpenAI's rumored Garlic model. Aggregating media reports, technical analysis, and community discussions.">
-    <meta property="og:image" content="https://garlic-model.com/og-image.jpg">
+    <meta property="og:image" content="https://garlic-model.com/og-image.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://garlic-model.com/">
     <meta property="twitter:title" content="OpenAI Garlic Model - What We Know So Far">
     <meta property="twitter:description" content="Independent information hub for OpenAI's rumored Garlic model. Aggregating media reports and technical analysis.">
-    <meta property="twitter:image" content="https://garlic-model.com/og-image.jpg">
+    <meta property="twitter:image" content="https://garlic-model.com/og-image.png">
     
     <!-- Additional Meta Tags -->
     <meta name="robots" content="index, follow">
