--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
     
     <!-- Theme Color -->
     <meta name="theme-color" content="#020617">
+    <script>
+      window.op = window.op||function(...args){(window.op.q=window.op.q||[]).push(args);};
+      window.op('init', {
+        clientId: '45f18f7d-4907-4d99-9d7c-0496d822389e',
+        trackScreenViews: true,
+        trackOutgoingLinks: true,
+        trackAttributes: true,
+      });
+    </script>
+    <script src="https://openpanel.dev/op1.js" defer async></script>
   </head>
   <body>
     <div id="app"></div>
